Adding Job Apply API Routes
