# internal/alpha.com/application/handler/jobApply/command.go
@@ -1,0 +1,6 @@
+package jobApply
+
+type Command struct {
+	JobID             string
+	BusinessAccountID string
+}
